--- a/README.org
+++ b/README.org
@@ -1,22 +1,12 @@
-* This is my dotfiles
+* Quick Start
 
+#+begin_src sh
+sh -c "$(curl -fsLS https://chezmoi.io/get)" -- init --apply $GITHUB_USERNAME
+#+end_src
+
+* Warning!!!
+
+This is a personal configuration, for reference only.
+
+* About
 Managed by [[https://www.chezmoi.io/][chezmoi]].
-
-* About chezmoi
-
-Manage your dotfiles across multiple diverse machines, securely.
-
-You can install chezmoi and my dotfiles on a new, empty machine with a single
-command.
-
-#+begin_src shell
-$ sh -c "$(curl -fsLS chezmoi.io/get)" -- init --apply $wowow005
-#+end_src
-
-Updating your dotfiles on any machine is a single command:
-
-#+begin_src shell
-$ chezmoi update
-#+end_src
-
-More information: [[https://www.chezmoi.io/quick-start/][Quick start]]
